--- a/purple/index.html
+++ b/purple/index.html
@@ -26,8 +26,7 @@
               <ul>
                 <li><a href="https://www.youtube.com/">Youtube</a></li>
                 <li><a href="https://github.com">Github</a></li>
-                <li><a href="https://web.whatsapp.com/">Whatsapp</a></li>
-                <li><a href="https://web.telegram.org/z/">Telegram</a></li>
+                <li><a href="https://replit.com/@NicolasLemaire1/cligpt">CLIGPT</a></li>
               </ul>
             </section>
             <section>
@@ -46,6 +45,8 @@
                 <li><a href="https://leetcode.com">LeetCode</a></li>
                 <li><a href="https://hackerrank.com">HackerRank</a></li>
                 <li><a href="https://FreeCodeCamp.org">FreeCodeCamp</a></li>
+                <li><a href="https://replit.com">Replit</a></li>
+                <li><a href="https://hackthebox.org">HTB</a></li>
               </ul>
             </section>
             <section>
