--- a/purple/index.html
+++ b/purple/index.html
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="search">
-          <form action="http://www.google.com/search">
+          <form action="https://www.google.com/search">
             <label for="q" autofocus>> find / </label>
             <input
               type="text"
