--- a/purple/index.html
+++ b/purple/index.html
@@ -62,13 +62,13 @@
         </div>
         <div class="search">
           <form action="https://www.google.com/search">
-            <label for="q" autofocus>> find / </label>
+            <label for="q" autofocus="true">> find / </label>
             <input
               type="text"
               placeholder="Type Here"
               name="q"
               autocomplete="off"
-              autofocus
+              autofocus="true"
             />
           </form>
         </div>
