--- a/purple/index.html
+++ b/purple/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&amp;display=swap"
       rel="stylesheet"
     />
-    <title>Startpage</title>
+    <title>WackHub</title>
   </head>
 
   <body>
