--- a/purple/index.html
+++ b/purple/index.html
@@ -26,6 +26,7 @@
               <ul>
                 <li><a href="https://www.youtube.com/">Youtube</a></li>
                 <li><a href="https://github.com">Github</a></li>
+                <li><a href="https://platform.openai.com/overview">OpenAI</a></li>
                 <li><a href="https://replit.com/@NicolasLemaire1/cligpt">CLIGPT</a></li>
               </ul>
             </section>
