--- a/purple/index.html
+++ b/purple/index.html
@@ -28,12 +28,12 @@
                 <li><a href="https://github.com">Github</a></li>
                 <li><a href="https://platform.openai.com/overview">OpenAI</a></li>
                 <li><a href="https://replit.com/@NicolasLemaire1/cligpt">CLIGPT</a></li>
+                <li><a href="https://monkeytype.com/">MonkeyType</a></li>
               </ul>
             </section>
             <section>
               <h3>Social</h3>
               <ul>
-                <li><a href="https://twitter.com/">Twitter</a></li>
                 <li><a href="https://www.reddit.com/">Reddit</a></li>
                 <li><a href="https://Instagram.com">Instagram</a></li>
                 <li><a href="https://discord.com/app">Discord</a></li>
