--- a/purple/index.html
+++ b/purple/index.html
@@ -48,6 +48,7 @@
                 <li><a href="https://FreeCodeCamp.org">FreeCodeCamp</a></li>
                 <li><a href="https://replit.com">Replit</a></li>
                 <li><a href="https://hackthebox.org">HTB</a></li>
+                <li><a href="https://xdaforums.com/">XDAForums</a></li>
               </ul>
             </section>
             <section>
